package com.conceptarena.kernel.command;

public interface Command<T> {
}
